--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
+    "minifier": "^0.8.0",
     "watchify": "^3.7.0"
   },
   "babel": {
     "presets": [
-      "react"
+      "react", "latest"
     ]
   }
 }
